k8s/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: devops
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
