k8s/logs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logs-service
  namespace: devops
spec:
  selector:
    app: logs
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
