k8s/monitoring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  namespace: devops
spec:
  selector:
    app: monitoring
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: ClusterIP
