k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops
spec:
  selector:
    app: devops-flow-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
